# ocean_thickness

./: .gitignore  .gitmodules  CMakeLists.txt
include/FAcq/: SmoothingMode.hpp  types.hpp
include/FAcq/devices/acquisition/spectrometer/: OceanOpticsSpectrometer.hpp  SimulatedSpectrometer.hpp  Spectrometer.hpp
include/FAcq/preprocess/: DDSketchSmoother.hpp  DummySmoother.hpp  EWMASmoother.hpp  KLLSketchSmoother.hpp  MovingAverage.hpp  PSquaresSmoother.hpp  REQSketchSmoother.hpp  TDigestSmoother.hpp  TimeDomainSmoother.hpp
src/: CMakeLists.txt  GUI.cpp  GUI.hpp  main.cpp
src/devices/acquisition/spectrometer/: OceanOpticsSpectrometer.cpp  SimulatedSpectrometer.cpp  Spectrometer.cpp
src/preprocess/: DDSketchSmoother.cpp  DummySmoother.cpp  EWMASmoother.cpp  KLLSketchSmoother.cpp  MovingAverage.cpp  PSquaresSmoother.cpp  REQSketchSmoother.cpp  TDigestSmoother.cpp  TimeDomainSmoother.cpp
